--- a/index.html
+++ b/index.html
@@ -6,5 +6,24 @@
     <link rel="stylesheet" href="style.css" />
     <title>Wikimedic</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="./img/wikimedic.png" alt="Logo da Wikimedic" />
+      </div>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#hot">Em alta</a>
+        <a href="#about_us">Sobre nós</a>
+      </nav>
+      <div class="search">
+        <img src="" alt="" />
+        <input type="text" />
+      </div>
+      <div>
+        <a href="./html/login.html">Login</a>
+        <div class="menu"></div>
+      </div>
+    </header>
+  </body>
 </html>
