adicionei o ícone de search

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Wikimedic</title>
   </head>
@@ -17,10 +21,10 @@
         <a href="#about_us">Sobre nós</a>
       </nav>
       <div class="search">
-        <img src="" alt="" />
+        <span class="material-symbols-rounded">search</span>
         <input type="text" />
       </div>
-      <div>
+      <div class="login">
         <a href="./html/login.html">Login</a>
         <div class="menu"></div>
       </div>
