Terminei a página inicial.

--- a/index.html
+++ b/index.html
@@ -29,5 +29,17 @@
         <div class="menu"></div>
       </div>
     </header>
+
+    <main>
+      <section class="inicial">
+        <img src="./img/logo_icon.png" alt="Ícone da logo da Wikimedic" />
+        <p>A INFORMAÇÃO A DISTÂNCIA DE UM CLIQUE</p>
+        <p>
+          <a href="#read_more">Saiba Mais</a>
+        </p>
+      </section>
+    </main>
+
+    <footer></footer>
   </body>
 </html>
