--- a/index.html
+++ b/index.html
@@ -26,7 +26,42 @@
       </div>
       <div class="login">
         <a href="./html/login.html">Login</a>
-        <div class="menu"></div>
+        <!-- <nav class="menu">
+          <input type="checkbox" class="menu-faketrigger" />
+          <div class="menu-lines">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <ul>
+            <div id="menu-buttons">
+              <a href="./html/hot_drugs.html">
+                <li>Remédios Populares</li>
+              </a>
+              <a href="./html/pediatria.html">
+                <li>Pediatria</li>
+              </a>
+              <a href="./html/fitoterapicos.html">
+                <li>Fitoterápicos</li>
+              </a>
+              <a href="./html/genericos.html">
+                <li>Genéricos</li>
+              </a>
+              <a href="./html/homeopaticos.html">
+                <li>Homeopáticos</li>
+              </a>
+              <a href="./html/similares.html">
+                <li>Similares</li>
+              </a>
+              <a href="./html/alopaticos.html">
+                <li>Alopáticos</li>
+              </a>
+              <a href="./index.html">
+                <li id="selected">Sobre o projeto</li>
+              </a>
+            </div>
+          </ul>
+        </nav> -->
       </div>
     </header>
 
@@ -38,6 +73,7 @@
           <a href="#read_more">Saiba Mais</a>
         </p>
       </section>
+      <img src="./img/drugs_background.png" alt="" />
     </main>
 
     <footer></footer>
