Arrumei (eu acho) um bug do github pages

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <p>
           <a href="#read_more">Saiba Mais</a>
         </p>
+        <img src="./img/drugs_background.png" alt="Fundo de remédios" />
       </section>
-      <img src="./img/drugs_background.png" alt="" />
     </main>
 
     <footer></footer>
