--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <img src="./img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
       <nav>
-        <a href="#home">Home</a>
-        <a href="#hot">Em alta</a>
-        <a href="#about_us">Sobre nós</a>
+        <a href="">Home</a>
+        <a href="">Em alta</a>
+        <a href="">Sobre nós</a>
       </nav>
       <div class="search">
         <input type="text" />
@@ -70,12 +70,40 @@
         <img src="./img/logo_icon.png" alt="Ícone da logo da Wikimedic" />
         <p>A INFORMAÇÃO A DISTÂNCIA DE UM CLIQUE</p>
         <p>
-          <a href="#read_more">Saiba Mais</a>
+          <a href="">Saiba Mais</a>
         </p>
         <img src="./img/drugs_background.png" alt="Fundo de remédios" />
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div>
+        <article class="about_us">
+          <p>
+            <a href="">Sobre nós</a>
+          </p>
+          <p>
+            <a href="">Missão</a>
+          </p>
+          <p>
+            <a href="">Visão</a>
+          </p>
+          <p>
+            <a href="">Valores</a>
+          </p>
+        </article>
+        <article class="contact">
+          <p>Contato</p>
+          <p>wikimedic@yourcompany.com</p>
+          <p>(11)-00000-0000</p>
+        </article>
+        <article class="social_media">
+          <img src="./img/facebook_logo.png" alt="Logo do facebook" />
+          <img src="./img/instagram_logo.png" alt="Logo do instagram" />
+          <img src="./img/twitter_logo.png" alt="Logo do twitter" />
+          <p>2023- © wikimedic.Todos os Direitos Reservados</p>
+        </article>
+      </div>
+    </footer>
   </body>
 </html>
