--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       </div>
       <div class="login">
         <a href="./html/login.html">Login</a>
-        <!-- <nav class="menu">
+        <nav class="menu">
           <input type="checkbox" class="menu-faketrigger" />
           <div class="menu-lines">
             <span></span>
             <span></span>
             <span></span>
           </div>
-          <ul>
+          <!-- <ul>
             <div id="menu-buttons">
               <a href="./html/hot_drugs.html">
                 <li>Remédios Populares</li>
@@ -60,8 +60,8 @@
                 <li id="selected">Sobre o projeto</li>
               </a>
             </div>
-          </ul>
-        </nav> -->
+          </ul> -->
+        </nav>
       </div>
     </header>
 
