--- a/index.html
+++ b/index.html
@@ -33,34 +33,16 @@
             <span></span>
             <span></span>
           </div>
-          <!-- <ul>
-            <div id="menu-buttons">
-              <a href="./html/hot_drugs.html">
-                <li>Remédios Populares</li>
-              </a>
-              <a href="./html/pediatria.html">
-                <li>Pediatria</li>
-              </a>
-              <a href="./html/fitoterapicos.html">
-                <li>Fitoterápicos</li>
-              </a>
-              <a href="./html/genericos.html">
-                <li>Genéricos</li>
-              </a>
-              <a href="./html/homeopaticos.html">
-                <li>Homeopáticos</li>
-              </a>
-              <a href="./html/similares.html">
-                <li>Similares</li>
-              </a>
-              <a href="./html/alopaticos.html">
-                <li>Alopáticos</li>
-              </a>
-              <a href="./index.html">
-                <li id="selected">Sobre o projeto</li>
-              </a>
-            </div>
-          </ul> -->
+          <ul>
+            <li><a href="./html/hot_drugs.html">Remédios Populares</a></li>
+            <li><a href="./html/pediatria.html">Pediatria</a></li>
+            <li><a href="./html/fitoterapicos.html">Fitoterápicos</a></li>
+            <li><a href="./html/genericos.html">Genéricos</a></li>
+            <li><a href="./html/homeopaticos.html">Homeopáticos</a></li>
+            <li><a href="./html/similares.html">Similares</a></li>
+            <li><a href="./html/alopaticos.html">Alopáticos</a></li>
+            <li><a href="./index.html">Sobre o projeto</a></li>
+          </ul>
         </nav>
       </div>
     </header>
