Fazendo algumas seções do main.

--- a/index.html
+++ b/index.html
@@ -48,14 +48,45 @@
     </header>
 
     <main>
-      <section class="inicial">
+      <article class="inicial">
         <img src="./img/logo_icon.png" alt="Ícone da logo da Wikimedic" />
         <p>A INFORMAÇÃO A DISTÂNCIA DE UM CLIQUE</p>
         <p>
           <a href="">Saiba Mais</a>
         </p>
         <img src="./img/drugs_background.png" alt="Fundo de remédios" />
-      </section>
+      </article>
+
+      <article class="information">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste hic aut
+          quo dolor explicabo? Voluptates ex maiores delectus magnam
+          repudiandae, eos dicta inventore. Similique nisi consequuntur
+          praesentium repellat? Voluptate, laudantium?
+        </p>
+        <section>
+          <div>
+            <figure>
+              <img src="./img/speaker_icon.png" />
+            </figure>
+            <p>INFORMAÇÃO</p>
+          </div>
+
+          <div>
+            <figure>
+              <img src="./img/tech_icon.png" />
+            </figure>
+            <p>TECNOLOGIA</p>
+          </div>
+
+          <div>
+            <figure>
+              <img src="./img/touch_icon.png" />
+            </figure>
+            <p>AO ALCANCE DE UM CLIQUE</p>
+          </div>
+        </section>
+      </article>
     </main>
 
     <footer>
