Página principal finalizada.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Wikimedic</title>
   </head>
   <body>
@@ -84,6 +85,36 @@
               <img src="./img/touch_icon.png" />
             </figure>
             <p>AO ALCANCE DE UM CLIQUE</p>
+          </div>
+        </section>
+      </article>
+
+      <article class="security">
+        <section class="header">
+          <h2>CRIADA COM A SEGURANÇA QUE VOCÊ PRECISA</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas
+            voluptas error vel soluta labore assumenda molestias veniam
+            doloribus harum odio, voluptatem tenetur, quisquam dicta temporibus
+            sit amet quibusdam quidem impedit.
+          </p>
+        </section>
+
+        <section class="main">
+          <h2>ÉTICA, SEGURANÇA E TECNOLOGIA</h2>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+              iste minus veritatis aperiam. Ipsum, doloremque aliquam debitis
+              qui magnam soluta vero ipsa. Aspernatur quaerat, quibusdam dolores
+              quas velit sunt neque!
+            </p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint et
+              veritatis, non eos quaerat tenetur doloribus voluptatum voluptas
+              libero ex tempore neque, commodi exercitationem eveniet laborum
+              cum id illo eius.
+            </p>
           </div>
         </section>
       </article>
