--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <a href="">Home</a>
         <a href="">Em alta</a>
-        <a href="">Sobre nós</a>
+        <a href="./html/sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
         <input type="text" />
