Fazendo a página sobre o projeto.

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../css/sobre.css" />
+    <link rel="stylesheet" href="../css/about_project.css" />
     <title>Wikimedic</title>
   </head>
   <body>
@@ -20,13 +20,14 @@
         <a href="../index.html">Home</a>
         <a href="">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
+        <a href="./about_project.html">Sobre o projeto</a>
       </nav>
       <div class="search">
         <input type="text" />
         <span class="material-symbols-rounded">search</span>
       </div>
       <div class="login">
-        <a href="../html/login.html">Login</a>
+        <a href="./login.html">Login</a>
         <nav class="menu">
           <input type="checkbox" class="menu-faketrigger" />
           <div class="menu-lines">
@@ -35,48 +36,38 @@
             <span></span>
           </div>
           <ul>
-            <li><a href="../html/hot_drugs.html">Remédios Populares</a></li>
-            <li><a href="../html/pediatria.html">Pediatria</a></li>
-            <li><a href="../html/fitoterapicos.html">Fitoterápicos</a></li>
-            <li><a href="../html/genericos.html">Genéricos</a></li>
-            <li><a href="../html/homeopaticos.html">Homeopáticos</a></li>
-            <li><a href="../html/similares.html">Similares</a></li>
-            <li><a href="../html/alopaticos.html">Alopáticos</a></li>
-            <li><a href="../index.html">Sobre o projeto</a></li>
+            <li><a href="./html/hot_drugs.html">Remédios Populares</a></li>
+            <li><a href="./html/pediatria.html">Pediatria</a></li>
+            <li><a href="./html/fitoterapicos.html">Fitoterápicos</a></li>
+            <li><a href="./html/genericos.html">Genéricos</a></li>
+            <li><a href="./html/homeopaticos.html">Homeopáticos</a></li>
+            <li><a href="./html/similares.html">Similares</a></li>
+            <li><a href="./html/alopaticos.html">Alopáticos</a></li>
+            <li><a href="./index.html">Sobre o projeto</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
     <main>
-      <section id="initial">
-        <img src="../img/white-logo.png" alt="Logo da Wikimedic" />
-      </section>
-
-      <section id="sobre">
-        <h2>SOBRE NÓS</h2>
-        <div class="text-sobre">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
-          </p>
+      <article class="header">
+        <h1>CRIADA COM A SEGURANÇA QUE VOCÊ PRECISA</h1>
+        <div>
+          <a href="">Artigos</a>
+          <a href="">Agenda 2030</a>
+          <a href="">Entrevistas</a>
+          <a href="">Curiosidades</a>
         </div>
-      </section>
+      </article>
+
+      <article class="article"></article>
     </main>
 
     <footer>
       <div>
         <article class="about_us">
           <p>
-            <a href="">Sobre nós</a>
+            <a href="./sobre.html">Sobre nós</a>
           </p>
           <p>
             <a href="">Missão</a>
