--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <img src="./img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
       <nav>
-        <a href="">Home</a>
+        <a href="./index.html">Home</a>
         <a href="">Em alta</a>
         <a href="./html/sobre.html">Sobre nós</a>
+        <a href="./html/about_project.html">Sobre o projeto</a>
       </nav>
       <div class="search">
         <input type="text" />
@@ -124,7 +125,7 @@
       <div>
         <article class="about_us">
           <p>
-            <a href="">Sobre nós</a>
+            <a href="./html/sobre.html">Sobre nós</a>
           </p>
           <p>
             <a href="">Missão</a>
