--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         </article>
       </div>
       <script src="./js/api/script.js"></script>
+      <script src="./js/search.js"></script>
     </footer>
   </body>
 </html>
