--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <p>2023- © wikimedic.Todos os Direitos Reservados</p>
         </article>
       </div>
-      <script src="./js/api/script.js"></script>
+      <!-- <script src="./js/api/script.js"></script> -->
       <script src="./js/search.js"></script>
     </footer>
   </body>
