--- a/html/medic.html
+++ b/html/medic.html
@@ -7,22 +7,22 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
-    <link rel="stylesheet" href="./css/search-result.css"/> <!-- CSS da barra de pesquisa e resultados, convertam para css depos se quiserem -->
+    <link rel="stylesheet" href="../css/search-result.css"/> <!-- CSS da barra de pesquisa e resultados, convertam para css depos se quiserem -->
     <title>Wikimedic</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="./img/wikimedic.png" alt="Logo da Wikimedic" />
+        <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
       <nav>
-        <a href="./index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="">Em alta</a>
-        <a href="./html/sobre.html">Sobre nós</a>
-        <a href="./html/about_project.html">Sobre o projeto</a>
+        <a href="../html/sobre.html">Sobre nós</a>
+        <a href="../html/about_project.html">Sobre o projeto</a>
       </nav>
       <div class="search">
         <input type="text" id="search"/>
@@ -30,7 +30,7 @@
       </div>
       <ul id="result"></ul>
       <div class="login">
-        <a href="./html/login.html">Login</a>
+        <a href="../html/login.html">Login</a>
         <nav class="menu">
           <input type="checkbox" class="menu-faketrigger" />
           <div class="menu-lines">
@@ -39,14 +39,14 @@
             <span></span>
           </div>
           <ul>
-            <li><a href="./html/hot_drugs.html">Remédios Populares</a></li>
-            <li><a href="./html/pediatria.html">Pediatria</a></li>
-            <li><a href="./html/fitoterapicos.html">Fitoterápicos</a></li>
-            <li><a href="./html/genericos.html">Genéricos</a></li>
-            <li><a href="./html/homeopaticos.html">Homeopáticos</a></li>
-            <li><a href="./html/similares.html">Similares</a></li>
-            <li><a href="./html/alopaticos.html">Alopáticos</a></li>
-            <li><a href="./index.html">Sobre o projeto</a></li>
+            <li><a href="../html/hot_drugs.html">Remédios Populares</a></li>
+            <li><a href="../html/pediatria.html">Pediatria</a></li>
+            <li><a href="../html/fitoterapicos.html">Fitoterápicos</a></li>
+            <li><a href="../html/genericos.html">Genéricos</a></li>
+            <li><a href="../html/homeopaticos.html">Homeopáticos</a></li>
+            <li><a href="../html/similares.html">Similares</a></li>
+            <li><a href="../html/alopaticos.html">Alopáticos</a></li>
+            <li><a href="../index.html">Sobre o projeto</a></li>
           </ul>
         </nav>
       </div>
@@ -54,12 +54,12 @@
 
     <main>
       <article class="inicial">
-        <img src="./img/logo_icon.png" alt="Ícone da logo da Wikimedic" />
+        <img src="../img/logo_icon.png" alt="Ícone da logo da Wikimedic" />
         <p>A INFORMAÇÃO A DISTÂNCIA DE UM CLIQUE</p>
         <p>
           <a href="">Saiba Mais</a>
         </p>
-        <img src="./img/drugs_background.png" alt="Fundo de remédios" />
+        <img src="../img/drugs_background.png" alt="Fundo de remédios" />
       </article>
 
       <article class="information">
@@ -72,21 +72,21 @@
         <section>
           <div>
             <figure>
-              <img src="./img/speaker_icon.png" />
+              <img src="../img/speaker_icon.png" />
             </figure>
             <p>INFORMAÇÃO</p>
           </div>
 
           <div>
             <figure>
-              <img src="./img/tech_icon.png" />
+              <img src="../img/tech_icon.png" />
             </figure>
             <p>TECNOLOGIA</p>
           </div>
 
           <div>
             <figure>
-              <img src="./img/touch_icon.png" />
+              <img src="../img/touch_icon.png" />
             </figure>
             <p>AO ALCANCE DE UM CLIQUE</p>
           </div>
@@ -128,7 +128,7 @@
       <div>
         <article class="about_us">
           <p>
-            <a href="./html/sobre.html">Sobre nós</a>
+            <a href="../html/sobre.html">Sobre nós</a>
           </p>
           <p>
             <a href="">Missão</a>
@@ -146,13 +146,14 @@
           <p>(11)-00000-0000</p>
         </article>
         <article class="social_media">
-          <img src="./img/facebook_logo.png" alt="Logo do facebook" />
-          <img src="./img/instagram_logo.png" alt="Logo do instagram" />
-          <img src="./img/twitter_logo.png" alt="Logo do twitter" />
+          <img src="../img/facebook_logo.png" alt="Logo do facebook" />
+          <img src="../img/instagram_logo.png" alt="Logo do instagram" />
+          <img src="../img/twitter_logo.png" alt="Logo do twitter" />
           <p>2023- © wikimedic.Todos os Direitos Reservados</p>
         </article>
       </div>
-      <script src="./js/api/script.js"></script>
+      <script src="../js/api/script.js"></script>
+      <script src="../js/search.js"></script>
     </footer>
   </body>
 </html>
