Script para construir remédio quase pronto

--- a/html/medic.html
+++ b/html/medic.html
@@ -70,26 +70,9 @@
           praesentium repellat? Voluptate, laudantium?
         </p>
         <section>
-          <div>
-            <figure>
-              <img src="../img/speaker_icon.png" />
-            </figure>
-            <p>INFORMAÇÃO</p>
-          </div>
-
-          <div>
-            <figure>
-              <img src="../img/tech_icon.png" />
-            </figure>
-            <p>TECNOLOGIA</p>
-          </div>
-
-          <div>
-            <figure>
-              <img src="../img/touch_icon.png" />
-            </figure>
-            <p>AO ALCANCE DE UM CLIQUE</p>
-          </div>
+          <p id="medic-name"></p>
+          <a id="medic-pdf"></a>
+            
         </section>
       </article>
 
@@ -154,6 +137,7 @@
       </div>
       <script src="../js/api/script.js"></script>
       <script src="../js/search.js"></script>
+      <script src="../js/medic_load.js"></script>
     </footer>
   </body>
 </html>
