Arrumando a search bar.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./css/main.css" />
-
-    <link rel="stylesheet" href="./css/search-result.css"/> <!-- CSS da barra de pesquisa e resultados, convertam para css depos se quiserem -->
+    <link rel="stylesheet" href="./css/search_result.css" />
     <title>Wikimedic</title>
   </head>
   <body>
@@ -25,7 +24,7 @@
         <a href="./html/about_project.html">Sobre o projeto</a>
       </nav>
       <div class="search">
-        <input type="text" id="search"/>
+        <input type="text" id="search" />
         <span class="material-symbols-rounded">search</span>
       </div>
       <ul id="result"></ul>
