--- a/html/medic.html
+++ b/html/medic.html
@@ -1,143 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../css/main.css" />
 
-    <link rel="stylesheet" href="../css/search-result.css"/> <!-- CSS da barra de pesquisa e resultados, convertam para css depos se quiserem -->
-    <title>Wikimedic</title>
-  </head>
-  <body>
-    <header>
-      <div class="logo">
-        <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
-      </div>
-      <nav>
-        <a href="../index.html">Home</a>
-        <a href="">Em alta</a>
-        <a href="../html/sobre.html">Sobre nós</a>
-        <a href="../html/about_project.html">Sobre o projeto</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="../css/main.css" />
+
+  <link rel="stylesheet" href="../css/search-result.css" />
+  <!-- CSS da barra de pesquisa e resultados, convertam para css depos se quiserem -->
+  <title>Wikimedic</title>
+</head>
+
+<body>
+  <header>
+    <div class="logo">
+      <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
+    </div>
+    <nav>
+      <a href="../index.html">Home</a>
+      <a href="">Em alta</a>
+      <a href="../html/sobre.html">Sobre nós</a>
+      <a href="../html/about_project.html">Sobre o projeto</a>
+    </nav>
+    <div class="search">
+      <input type="text" id="search" />
+      <span class="material-symbols-rounded">search</span>
+    </div>
+    <ul id="result"></ul>
+    <div class="login">
+      <a href="../html/login.html">Login</a>
+      <nav class="menu">
+        <input type="checkbox" class="menu-faketrigger" />
+        <div class="menu-lines">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul>
+          <li><a href="../html/hot_drugs.html">Remédios Populares</a></li>
+          <li><a href="../html/pediatria.html">Pediatria</a></li>
+          <li><a href="../html/fitoterapicos.html">Fitoterápicos</a></li>
+          <li><a href="../html/genericos.html">Genéricos</a></li>
+          <li><a href="../html/homeopaticos.html">Homeopáticos</a></li>
+          <li><a href="../html/similares.html">Similares</a></li>
+          <li><a href="../html/alopaticos.html">Alopáticos</a></li>
+          <li><a href="../index.html">Sobre o projeto</a></li>
+        </ul>
       </nav>
-      <div class="search">
-        <input type="text" id="search"/>
-        <span class="material-symbols-rounded">search</span>
-      </div>
-      <ul id="result"></ul>
-      <div class="login">
-        <a href="../html/login.html">Login</a>
-        <nav class="menu">
-          <input type="checkbox" class="menu-faketrigger" />
-          <div class="menu-lines">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-          <ul>
-            <li><a href="../html/hot_drugs.html">Remédios Populares</a></li>
-            <li><a href="../html/pediatria.html">Pediatria</a></li>
-            <li><a href="../html/fitoterapicos.html">Fitoterápicos</a></li>
-            <li><a href="../html/genericos.html">Genéricos</a></li>
-            <li><a href="../html/homeopaticos.html">Homeopáticos</a></li>
-            <li><a href="../html/similares.html">Similares</a></li>
-            <li><a href="../html/alopaticos.html">Alopáticos</a></li>
-            <li><a href="../index.html">Sobre o projeto</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    </div>
+  </header>
 
-    <main>
-      <article class="inicial">
-        <img src="../img/logo_icon.png" alt="Ícone da logo da Wikimedic" />
-        <p>A INFORMAÇÃO A DISTÂNCIA DE UM CLIQUE</p>
-        <p>
-          <a href="">Saiba Mais</a>
-        </p>
-        <img src="../img/drugs_background.png" alt="Fundo de remédios" />
-      </article>
+  <main>
+    <section>
+      <p id="medic-name"></p>
+      <a id="medic-pdf"></a>
+    </section>
+    </article>
 
-      <article class="information">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste hic aut
-          quo dolor explicabo? Voluptates ex maiores delectus magnam
-          repudiandae, eos dicta inventore. Similique nisi consequuntur
-          praesentium repellat? Voluptate, laudantium?
-        </p>
-        <section>
-          <p id="medic-name"></p>
-          <a id="medic-pdf"></a>
-            
-        </section>
-      </article>
+    <script src="../js/search.js"></script>
+    <script src="../js/medic_load.js"></script>
+</body>
 
-      <article class="security">
-        <section class="header">
-          <h2>CRIADA COM A SEGURANÇA QUE VOCÊ PRECISA</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas
-            voluptas error vel soluta labore assumenda molestias veniam
-            doloribus harum odio, voluptatem tenetur, quisquam dicta temporibus
-            sit amet quibusdam quidem impedit.
-          </p>
-        </section>
-
-        <section class="main">
-          <h2>ÉTICA, SEGURANÇA E TECNOLOGIA</h2>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
-              iste minus veritatis aperiam. Ipsum, doloremque aliquam debitis
-              qui magnam soluta vero ipsa. Aspernatur quaerat, quibusdam dolores
-              quas velit sunt neque!
-            </p>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint et
-              veritatis, non eos quaerat tenetur doloribus voluptatum voluptas
-              libero ex tempore neque, commodi exercitationem eveniet laborum
-              cum id illo eius.
-            </p>
-          </div>
-        </section>
-      </article>
-    </main>
-
-    <footer>
-      <div>
-        <article class="about_us">
-          <p>
-            <a href="../html/sobre.html">Sobre nós</a>
-          </p>
-          <p>
-            <a href="">Missão</a>
-          </p>
-          <p>
-            <a href="">Visão</a>
-          </p>
-          <p>
-            <a href="">Valores</a>
-          </p>
-        </article>
-        <article class="contact">
-          <p>Contato</p>
-          <p>wikimedic@yourcompany.com</p>
-          <p>(11)-00000-0000</p>
-        </article>
-        <article class="social_media">
-          <img src="../img/facebook_logo.png" alt="Logo do facebook" />
-          <img src="../img/instagram_logo.png" alt="Logo do instagram" />
-          <img src="../img/twitter_logo.png" alt="Logo do twitter" />
-          <p>2023- © wikimedic.Todos os Direitos Reservados</p>
-        </article>
-      </div>
-      <script src="../js/api/script.js"></script>
-      <script src="../js/search.js"></script>
-      <script src="../js/medic_load.js"></script>
-    </footer>
-  </body>
 </html>
