--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
 
       <article class="security">
         <section class="header">
-          <h2>CRIADA COM A SEGURANÇA QUE VOCÊ PRECISA</h2>
+          <div>
+            <h2>CRIADA COM A SEGURANÇA QUE VOCÊ PRECISA</h2>
+            <p>
+              <a href="">Sobre o Projeto</a>
+            </p>
+          </div>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas
             voluptas error vel soluta labore assumenda molestias veniam
