fiz coisa pra caramba, to quase terminando o sobre nós e terminei a página padrão.

--- a/html/sobre.html
+++ b/html/sobre.html
@@ -49,11 +49,11 @@
     </header>
 
     <main>
-      <section id="initial">
+      <article id="initial">
         <img src="../img/white-logo.png" alt="Logo da Wikimedic" />
-      </section>
+      </article>
 
-      <section id="sobre">
+      <article class="sobre standard_style">
         <h2>SOBRE NÓS</h2>
         <div class="text-sobre">
           <p>
@@ -69,7 +69,125 @@
             commodo ultricies.
           </p>
         </div>
-      </section>
+      </article>
+
+      <article class="team">
+        <div class="information">
+          <h2>CONHEÇA NOSSA EQUIPE</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, nemo
+            suscipit, accusantium reiciendis cumque quaerat voluptatem in ad,
+            quo doloremque perferendis numquam. Rem repellendus quas optio
+            laborum tenetur debitis. Ratione.
+          </p>
+        </div>
+        <div class="persons">
+          <div class="person">
+            <img src="../img/edward.jpg" alt="Foto do aluno André Dias" />
+            <p class="role">Programador Back-end</p>
+            <p class="decription">
+              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
+              sem, congue interdum consequat sit amet, viverra.
+            </p>
+          </div>
+          <div class="person">
+            <img src="../img/tendou.jpg" alt="Foto do aluno Arthur Rolemberg" />
+            <p class="role">Programador Front-end</p>
+            <p class="decription">
+              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
+              sem, congue interdum consequat sit amet, viverra.
+            </p>
+          </div>
+          <div class="person">
+            <img src="../img/robin.jpg" alt="Foto da aluna Beatriz Bezerra" />
+            <p class="role">Designer / Líder de Projeto</p>
+            <p class="decription">
+              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
+              sem, congue interdum consequat sit amet, viverra.
+            </p>
+          </div>
+          <div class="person">
+            <img src="../img/yami.jpg" alt="Foto do aluno Eduardo Rossi" />
+            <p class="role">Pesquisador</p>
+            <p class="decription">
+              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
+              sem, congue interdum consequat sit amet, viverra.
+            </p>
+          </div>
+          <div class="person">
+            <img src="../img/aoyama.jpg" alt="Foto do aluno Gabriel Moreira" />
+            <p class="role">Programador Front-end</p>
+            <p class="decription">
+              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
+              sem, congue interdum consequat sit amet, viverra.
+            </p>
+          </div>
+        </div>
+      </article>
+
+      <article class="vision standard_style">
+        <h2>VISÃO</h2>
+        <div class="text-sobre">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+            ultrices convallis lectus, a varius orci gravida quis. Nunc non
+            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
+            commodo ultricies.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+            ultrices convallis lectus, a varius orci gravida quis. Nunc non
+            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
+            commodo ultricies.
+          </p>
+        </div>
+      </article>
+
+      <article class="quote">
+        <p>
+          A CIÊNCIA MODERNA AINDA NÃO PRODUZIU UM MEDICAMENTO TRANQUILIZADOR TÃO
+          EFICAZ COMO SÃO UMAS POUCAS PALAVRAS BOAS
+        </p>
+        <p>Sigmund Freud</p>
+      </article>
+
+      <article class="values standard_style">
+        <h2>VALORES</h2>
+        <div class="text-sobre">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+            ultrices convallis lectus, a varius orci gravida quis. Nunc non
+            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
+            commodo ultricies.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+            ultrices convallis lectus, a varius orci gravida quis. Nunc non
+            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
+            commodo ultricies.
+          </p>
+        </div>
+        <div class="icons">
+          <figure>
+            <img
+              src="../img/hand_shake.png"
+              alt="Ícone de duas mão se cumprimentando"
+            />
+            <figcaption>Lorem ipsum.</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="../img/drug_hand.png"
+              alt="Ícone de um remédio sobre uma mão"
+            />
+            <figcaption>Lorem ipsum.</figcaption>
+          </figure>
+          <figure>
+            <img src="../img/drug.png" alt="Ícone de um remédio" />
+            <figcaption>Lorem ipsum.</figcaption>
+          </figure>
+        </div>
+      </article>
     </main>
 
     <footer>
