--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <a href="./index.html">Home</a>
         <a href="">Em alta</a>
         <a href="./html/sobre.html">Sobre nós</a>
-        <a href="./html/about_project.html">Sobre o projeto</a>
       </nav>
       <div class="search">
         <input type="text" id="search" />
@@ -96,7 +95,7 @@
           <div>
             <h2>CRIADA COM A SEGURANÇA QUE VOCÊ PRECISA</h2>
             <p>
-              <a href="">Sobre o Projeto</a>
+              <a href="./html/about_project.html">Sobre o Projeto</a>
             </p>
           </div>
           <p>
