Terminei o sobre nós, e comecei o sobre o projeto.

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -20,7 +20,6 @@
         <a href="../index.html">Home</a>
         <a href="">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
-        <a href="./about_project.html">Sobre o projeto</a>
       </nav>
       <div class="search">
         <input type="text" />
@@ -60,7 +59,27 @@
         </div>
       </article>
 
-      <article class="article"></article>
+      <article class="article">
+        <div>
+          <h2>ARTIGO CIENTÍFICO</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+            expedita, placeat possimus deleniti tempora incidunt consequuntur
+            quasi aperiam, nihil perferendis ab quos, architecto fugit!
+            Excepturi nostrum voluptates a ipsam ea!
+          </p>
+          <p>
+            Maxime esse blanditiis architecto veritatis nulla labore quo libero
+            nam! Ducimus dolor asperiores quis eos atque ipsum ad inventore quod
+            incidunt libero possimus modi quam minima, suscipit exercitationem
+            sapiente omnis!
+          </p>
+        </div>
+        <figure>
+          <img src="../img/abelha2.jpg" alt="" />
+          <figcaption><a href="">Baixar PDF</a></figcaption>
+        </figure>
+      </article>
     </main>
 
     <footer>
