--- a/html/sobre.html
+++ b/html/sobre.html
@@ -175,6 +175,7 @@
             />
             <figcaption>Lorem ipsum.</figcaption>
           </figure>
+
           <figure>
             <img
               src="../img/drug_hand.png"
@@ -182,6 +183,7 @@
             />
             <figcaption>Lorem ipsum.</figcaption>
           </figure>
+
           <figure>
             <img src="../img/drug.png" alt="Ícone de um remédio" />
             <figcaption>Lorem ipsum.</figcaption>
@@ -212,12 +214,19 @@
           <p>(11)-00000-0000</p>
         </article>
         <article class="social_media">
-          <img src="../img/facebook_logo.png" alt="Logo do facebook" />
-          <img src="../img/instagram_logo.png" alt="Logo do instagram" />
-          <img src="../img/twitter_logo.png" alt="Logo do twitter" />
-          <p>2023- © wikimedic.Todos os Direitos Reservados</p>
+          <a href=""
+            ><img src="../img/facebook_logo.png" alt="Logo do facebook"
+          /></a>
+          <a href=""
+            ><img src="../img/instagram_logo.png" alt="Logo do instagram"
+          /></a>
+          <a href=""
+            ><img src="../img/twitter_logo.png" alt="Logo do twitter"
+          /></a>
+          <p>2023 - © Wikimedic. Todos os Direitos Reservados</p>
         </article>
       </div>
     </footer>
+    <script src="../js/team_carousel.js"></script>
   </body>
 </html>
