--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+code<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -148,9 +148,15 @@
           <p>(11)-00000-0000</p>
         </article>
         <article class="social_media">
-          <img src="./img/facebook_logo.png" alt="Logo do facebook" />
-          <img src="./img/instagram_logo.png" alt="Logo do instagram" />
-          <img src="./img/twitter_logo.png" alt="Logo do twitter" />
+          <a href=""
+            ><img src="../img/facebook_logo.png" alt="Logo do facebook"
+          /></a>
+          <a href=""
+            ><img src="../img/instagram_logo.png" alt="Logo do instagram"
+          /></a>
+          <a href=""
+            ><img src="../img/twitter_logo.png" alt="Logo do twitter"
+          /></a>
           <p>2023- © wikimedic.Todos os Direitos Reservados</p>
         </article>
       </div>
