--- a/html/medic.html
+++ b/html/medic.html
@@ -60,8 +60,10 @@
     </section>
     </article>
 
-    <script src="../js/search.js"></script>
-    <script src="../js/medic_load.js"></script>
+    <script src="../js/env.js" type="module"></script>
+    <script src="../js/search.js" type="module"></script>
+    <script src="../js/metodoServer.js" type="module" defer></script>
+    <script src="../js/medic_load.js" type="module"></script>
 </body>
 
 </html>
