--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@ code<!DOCTYPE html>
       </div>
       <!-- <script src="./js/api/script.js"></script> -->
       <script src="./js/search.js"></script>
+      <script>
+        const response = await fetch('https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1')
+        if(!response.ok)
+        {
+          alert('Servidor Bulario API está offline. \nBase de Dados desligada ou desconectada, alguns medicamentos não estarão disponíveis ')
+        }
+      </script>
     </footer>
   </body>
 </html>
