Dessa vez fiz pouca coisa ಥ_ಥ

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -75,10 +75,40 @@
             sapiente omnis!
           </p>
         </div>
-        <figure>
+        <figure class="standard_artic">
           <img src="../img/abelha2.jpg" alt="" />
-          <figcaption><a href="">Baixar PDF</a></figcaption>
+          <figcaption><a href="" download>Baixar PDF</a></figcaption>
         </figure>
+      </article>
+
+      <article class="articles">
+        <img src="../img/lupa_icon.png" alt="Ícone de lupa" />
+        <section>
+          <h2>ACESSE TAMBÉM</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus
+            iste minima, dignissimos sint tempore praesentium quis qui,
+            molestiae officia temporibus voluptatibus natus ad iure voluptates?
+            Debitis praesentium veritatis expedita corrupti?
+          </p>
+        </section>
+        <div class="slider">
+          <figure class="standard_artic">
+            <img src="../img/abelha2.jpg" alt="" />
+            <p></p>
+            <figcaption><a href="" download>Baixar PDF</a></figcaption>
+          </figure>
+          <figure class="standard_artic">
+            <img src="../img/abelha2.jpg" alt="" />
+            <p></p>
+            <figcaption><a href="" download>Baixar PDF</a></figcaption>
+          </figure>
+          <figure class="standard_artic">
+            <img src="../img/abelha2.jpg" alt="" />
+            <p></p>
+            <figcaption><a href="" download>Baixar PDF</a></figcaption>
+          </figure>
+        </div>
       </article>
     </main>
 
@@ -111,5 +141,6 @@
         </article>
       </div>
     </footer>
+    <script src="../js/carousel.js"></script>
   </body>
 </html>
