--- a/html/sobre.html
+++ b/html/sobre.html
@@ -81,7 +81,7 @@
             laborum tenetur debitis. Ratione.
           </p>
         </div>
-        <div class="persons">
+        <div class="slider">
           <div class="person">
             <img src="../img/edward.jpg" alt="Foto do aluno André Dias" />
             <p class="role">Programador Back-end</p>
@@ -227,6 +227,6 @@
         </article>
       </div>
     </footer>
-    <script src="../js/team_carousel.js"></script>
+    <script src="../js/carousel.js"></script>
   </body>
 </html>
