Pending changes exported from your codespace

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -110,6 +110,79 @@
           </figure>
         </div>
       </article>
+
+      <article class="agenda2030">
+        <h2>AGENDA 2030</h2>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+          voluptatibus itaque beatae rem ipsa. Eaque, at perferendis soluta ex
+          sunt laboriosam ducimus tempore itaque voluptatem quo, aut temporibus
+          quos magni?
+        </p>
+        <div class="aspects">
+          <div>
+            <figure>
+              <img
+                src="../img/heart_signal.png"
+                alt="Ícone de um eletrocardiograma"
+              />
+            </figure>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
+              commodi delectus iusto quaerat odio necessitatibus a earum,
+              repellat incidunt unde ad at quibusdam, officia non fuga vero aut
+              impedit ex!
+            </p>
+          </div>
+          <div>
+            <figure>
+              <img
+                src="../img/healthy_hands.png"
+                alt="Ícone de uma mão segurando a 'saúde'"
+              />
+            </figure>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
+              commodi delectus iusto quaerat odio necessitatibus a earum,
+              repellat incidunt unde ad at quibusdam, officia non fuga vero aut
+              impedit ex!
+            </p>
+          </div>
+          <div>
+            <figure>
+              <img
+                src="../img/healthy_life.png"
+                alt="Ícone da representação de uma vida saudável"
+              />
+            </figure>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
+              commodi delectus iusto quaerat odio necessitatibus a earum,
+              repellat incidunt unde ad at quibusdam, officia non fuga vero aut
+              impedit ex!
+            </p>
+          </div>
+        </div>
+      </article>
+
+      <article class="interview">
+        <div>
+          <h2>ENTREVISTAS</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+            repudiandae veniam, vero praesentium ipsum itaque repellendus
+            voluptatum aut eum obcaecati sit provident numquam, architecto unde
+            dolor enim, voluptate debitis placeat.
+          </p>
+          <p>
+            Corrupti ipsam fugiat architecto nobis. Consectetur fugit tenetur
+            quae obcaecati voluptatem enim eligendi ipsam magnam, velit nihil
+            quibusdam dolorum aliquam quisquam, molestiae provident, architecto
+            voluptatibus sit molestias aspernatur vero! Nostrum?
+          </p>
+        </div>
+        <div><a href="../html/interview.html">ACESSE JÁ</a></div>
+      </article>
     </main>
 
     <footer>
