Estou quase terminando a página de sobre o projeto.

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -181,7 +181,7 @@
             voluptatibus sit molestias aspernatur vero! Nostrum?
           </p>
         </div>
-        <div><a href="../html/interview.html">ACESSE JÁ</a></div>
+        <div class="btn"><a href="../html/interview.html">ACESSE JÁ</a></div>
       </article>
     </main>
 
