Ainda faltam algumas parte da página sobre o projeto.

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -166,6 +166,7 @@
       </article>
 
       <article class="interview">
+        <div class="bgc"></div>
         <div>
           <h2>ENTREVISTAS</h2>
           <p>
@@ -182,6 +183,35 @@
           </p>
         </div>
         <div class="btn"><a href="../html/interview.html">ACESSE JÁ</a></div>
+      </article>
+
+      <article class="curiosity">
+        <h2>CURIOSIDADES</h2>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit odio
+            provident, maxime natus eius iste soluta! Possimus dolorum, adipisci
+            libero exercitationem ipsam dolores, velit, temporibus inventore
+            excepturi hic modi assumenda!
+          </p>
+          <p>
+            Eaque voluptatem at sapiente. Illo aut vero earum magni fugit
+            laborum perferendis inventore nesciunt vel asperiores, quia natus
+            dolores debitis obcaecati atque fugiat, voluptatum quisquam id
+            itaque. Cupiditate, amet voluptatibus.
+          </p>
+        </div>
+      </article>
+
+      <article class="cannabis">
+        <div></div>
+        <h2>CANNABIS SATIVA</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+          aspernatur repellat alias, quod reprehenderit soluta eaque repudiandae
+          accusamus est cum hic adipisci quis voluptatum harum quibusdam sequi,
+          beatae ipsum dicta?
+        </p>
       </article>
     </main>
 
