Comecei a página de entrevista, e fizalgumas pequenas moficações em outras páginas.

--- a/html/sobre.html
+++ b/html/sobre.html
@@ -53,7 +53,7 @@
         <img src="../img/white-logo.png" alt="Logo da Wikimedic" />
       </article>
 
-      <article class="sobre standard_style">
+      <article class="sobre standard_style" id="mission">
         <h2>SOBRE NÓS</h2>
         <div class="text-sobre">
           <p>
@@ -125,7 +125,7 @@
         </div>
       </article>
 
-      <article class="vision standard_style">
+      <article class="vision standard_style" id="vision">
         <h2>VISÃO</h2>
         <div class="text-sobre">
           <p>
@@ -151,7 +151,7 @@
         <p>Sigmund Freud</p>
       </article>
 
-      <article class="values standard_style">
+      <article class="values standard_style" id="values">
         <h2>VALORES</h2>
         <div class="text-sobre">
           <p>
@@ -168,26 +168,32 @@
           </p>
         </div>
         <div class="icons">
-          <figure>
-            <img
-              src="../img/hand_shake.png"
-              alt="Ícone de duas mão se cumprimentando"
-            />
-            <figcaption>Lorem ipsum.</figcaption>
-          </figure>
+          <div>
+            <figure>
+              <img
+                src="../img/hand_shake.png"
+                alt="Ícone de duas mão se cumprimentando"
+              />
+            </figure>
+            <p>Lorem ipsum.</p>
+          </div>
 
-          <figure>
-            <img
-              src="../img/drug_hand.png"
-              alt="Ícone de um remédio sobre uma mão"
-            />
-            <figcaption>Lorem ipsum.</figcaption>
-          </figure>
+          <div>
+            <figure>
+              <img
+                src="../img/drug_hand.png"
+                alt="Ícone de um remédio sobre uma mão"
+              />
+            </figure>
+            <p>Lorem ipsum.</p>
+          </div>
 
-          <figure>
-            <img src="../img/drug.png" alt="Ícone de um remédio" />
-            <figcaption>Lorem ipsum.</figcaption>
-          </figure>
+          <div>
+            <figure>
+              <img src="../img/drug.png" alt="Ícone de um remédio" />
+            </figure>
+            <p>Lorem ipsum.</p>
+          </div>
         </div>
       </article>
     </main>
@@ -196,16 +202,16 @@
       <div>
         <article class="about_us">
           <p>
-            <a href="">Sobre nós</a>
+            <a href="./html/sobre.html">Sobre nós</a>
           </p>
           <p>
-            <a href="">Missão</a>
+            <a href="./html/sobre.html#mission">Missão</a>
           </p>
           <p>
-            <a href="">Visão</a>
+            <a href="./html/sobre.html#vision">Visão</a>
           </p>
           <p>
-            <a href="">Valores</a>
+            <a href="./html/sobre.html#values">Valores</a>
           </p>
         </article>
         <article class="contact">
